examples/deployment/eks-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dogtap-dev
  labels:
    dogtap-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
