examples/deployment/eks-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dogtap
  namespace: dogtap-dev
  labels:
    app.kubernetes.io/name: dogtap
    app.kubernetes.io/part-of: dogtap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dogtap
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: apm
      port: 8126
      targetPort: apm
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
    - name: otlp-http
      port: 4318
      targetPort: otlp-http
